remove chatroomusers, add read, add new endpoints for frontend
