# app/controllers/messages_controller.rb
@@ -42,7 +42,7 @@ class MessagesController < ApplicationController
     end
     
     def message_params
-      params.require(:message).permit(:sender_id, :receiver_id, :timestamp, :sentiment_analysis_score, :content, :message_type, :chat_room_id)
+      params.require(:message).permit(:read, :sender_id, :receiver_id, :timestamp, :sentiment_analysis_score, :content, :message_type, :chat_room_id)
     end
     
   end
