# app/models/chat_room.rb
@@ -1,3 +1,5 @@
 class ChatRoom < ApplicationRecord
-    has_many :graph_points
-end
+    belongs_to :user1, class_name: 'User'
+    belongs_to :user2, class_name: 'User'
+    has_many :messages
+  end
