# app/models/chat_room_user.rb
@@ -1,4 +1,0 @@
-class ChatRoomUser < ApplicationRecord
-  belongs_to :chat_room
-  belongs_to :user
-end
